--- a/app/src/main/res/layout/fragment_emoji.xml
+++ b/app/src/main/res/layout/fragment_emoji.xml
@@ -8,6 +8,8 @@
             name="kbviewmodel"
             type="com.sb.fittingKeyboard.service.viewmodel.KeyboardViewModel" />
 
+        <import type="com.sb.fittingKeyboard.service.viewmodel.KeyboardViewModel.InputTypeState" />
+
         <variable
             name="kbservice"
             type="com.sb.fittingKeyboard.service.MainKeyboardService" />
@@ -34,7 +36,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="0.15"
                     android:background="@drawable/keydesign_15_function"
-                    android:onClick="@{() -> kbservice.changeMode(3)}"
+                    android:onClick="@{() -> kbservice.setInputTypeState(InputTypeState.KR_NORMAL)}"
                     android:scaleType="fitCenter"
                     android:src="@drawable/ic_keyboard_black"
                     app:colorFilter="@{kbviewmodel.kbFunctionKeysFontColor}" />
